--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
       integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
   </head>
 
   <body>
@@ -75,8 +74,7 @@
                 type="text"
                 id="name"
                 placeholder="Твоє ім'я"
-                class="form-input"
-              />
+                class="form-input" />
             </div>
             <div>
               <label for="email">Email</label>
@@ -84,8 +82,7 @@
                 type="email"
                 id="email"
                 placeholder="Твій Email"
-                class="form-input"
-              />
+                class="form-input" />
             </div>
             <div>
               <label for="password">Повідомлення</label>
@@ -93,8 +90,7 @@
                 placeholder="Напиши своє повідомлення"
                 class="form-text"
                 rows="5"
-                cols="33"
-              ></textarea>
+                cols="33"></textarea>
             </div>
             <input type="submit" value="Надіслати" class="submit-btn" />
           </form>
